Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23372

rpl.rpl_skip_replication still fails in buildbot with an extra warning

    XMLWordPrintable

Details

    • Can result in unexpected behaviour

    Description

      The fix for MDEV-13258 / MDEV-14203 is in the 10.2 branch, but the test still fails:
      http://buildbot.askmonty.org/buildbot/builders/kvm-zyp-opensuse150-amd64/builds/3925/steps/mtr/logs/stdio

      rpl.rpl_skip_replication 'innodb,stmt'   w1 [ fail ]  Found warnings/errors in server log file!
              Test ended at 2020-08-02 17:28:42
      line
      2020-08-02 17:28:41 140066405730048 [Warning] Master is configured to log replication events with checksum, but will not send such events to slaves that cannot process them
      ^ Found warnings in /dev/shm/var/1/log/mysqld.1.err
      ok
       
       - saving '/dev/shm/var/1/log/rpl.rpl_skip_replication-innodb,stmt/' to '/dev/shm/var/log/rpl.rpl_skip_replication-innodb,stmt/'
       
      Retrying test rpl.rpl_skip_replication, attempt(2/3)...
      

      Attachments

        Issue Links

          Activity

            People

              Elkin Andrei Elkin
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2d 5h
                  2d 5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.