sql/slave.cc
@@ -3532,8 +3532,16 @@ static int request_dump(THD *thd, MYSQL* mysql, Master_info* mi,
       now we just fill up the error log :-)
     */
     if (mysql_errno(mysql) == ER_NET_READ_INTERRUPTED ||
-        mysql_errno(mysql) == ER_NET_ERROR_ON_WRITE)
-      *suppress_warnings= TRUE;                 // Suppress reconnect warning
+        mysql_errno(mysql) == ER_NET_ERROR_ON_WRITE ||
+        mysql_errno(mysql) == ER_NET_READ_ERROR)
+    {
+      *suppress_warnings= TRUE;           // Suppress reconnect warning on slave
+
+      if (global_system_variables.log_warnings > 2)
+        sql_print_error("Error on COM_BINLOG_DUMP: %d  %s, will retry in %d secs",
+                         mysql_errno(mysql), mysql_error(mysql),
+                         mi->connect_retry);
+    }
     else
       sql_print_error("Error on COM_BINLOG_DUMP: %d  %s, will retry in %d secs",
                       mysql_errno(mysql), mysql_error(mysql),
